src/test/resources/invalid/typecheck/Super_ReturnsVoid.vas
class Main is
    var a : Integer = 0
    this() is
        super().a
    end
end
